--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "npx vite"
   },
   "dependencies": {
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "three-addons": "^1.2.0"
   },
   "devDependencies": {
     "vite": "^5.2.11"
