--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "three": "^0.164.1",
-    "three-addons": "^1.2.0"
+    "three-addons": "^1.2.0",
+    "three-custom-shader-material": "^5.4.0"
   },
   "devDependencies": {
     "vite": "^5.2.11"
